--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Maye♡</title>
   <link rel="stylesheet" href="./styleS.css">
 </head>
-<body>
+<body id="content-all">
 <!-- partial:index.partial.html -->
-<body class="container">
+<body class="">
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
@@ -433,7 +433,7 @@
       </svg>
 </body>
 
-  <script  src="./script.js"></script>
+  <script  src="./main.js"></script>
 
 </body>
 </html>
