--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Maye♡</title>
   <link rel="stylesheet" href="./styleS.css">
 </head>
-<body id="content-all">
+<body>
 <!-- partial:index.partial.html -->
-<body class="">
+<body class="container">
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
