--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="./styleS.css">
 </head>
 <body>
+    <script src="https://javissneg.github.io/flowers/main.js"></script>
+    
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
