--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Maye♡</title>
-  <link rel="stylesheet" href="./styleS.css">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <script src="https://javissneg.github.io/flowers/main.js"></script>
-    
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
