--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <script src="./main.js"></script>
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
